fix people-items being positioning on smaller screens, add larger version of attheodo's picture

--- a/_sass/_people.scss
+++ b/_sass/_people.scss
@@ -1,3 +1,8 @@
+.people-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .people-entry {
   margin-bottom: 20px;
 }
